--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
         <img src="./static/images/ct-title-mb.png" style="max-width: 100%; width: 100%" />
       </div>
       <img src="./static/images/ct-banner.png" style="max-width: 100%; width: 100%" />
-      <img src="./static/images/thao-luan.png" style="max-width: 100%; width: 100%" class="pc"/>
+      <img src="./static/images/thao-luan.svg" style="max-width: 100%; width: 100%" class="pc"/>
       <img class="mobile" src="./static/images/chuong-trinh-1-mb.svg" style="width: 100%;height: auto;" /> 
       <img class="mobile" src="./static/images/chuong-trinh-2-mb.svg" style="width: 100%;height: auto;" />
        <a class="mobile" style="padding-bottom: 32px;" onclick="showChuongTrinh(2)"><i>(Xem chi tiết)</i></a>
@@ -549,34 +549,34 @@
         <div class="container">
           <div class="row">
             <div class="col-6">
-              <img src="./static/images/dien-gia-1-mb.svg" style="max-width: 100%; width: 100%;cursor: grab;" onclick="show(1)" />
+              <img src="./static/images/dien-gia-1-mb.svg" style="max-width: 100%;cursor: grab;" onclick="show(1)" />
             </div>
             <div class="col-6">
-              <img src="./static/images/dien-gia-2-mb.svg" style="max-width: 100%; width: 100%;cursor: grab;" onclick="show(2)" />
+              <img src="./static/images/dien-gia-2-mb.svg" style="max-width: 100%;cursor: grab;" onclick="show(2)" />
             </div>
             <div class="col-6">
-              <img src="./static/images/dien-gia-3-mb.svg" style="max-width: 100%; width: 100%;cursor: grab;" onclick="show(3)" />
+              <img src="./static/images/dien-gia-3-mb.svg" style="max-width: 100%;cursor: grab;" onclick="show(3)" />
             </div>
             <div class="col-6">
-              <img src="./static/images/dien-gia-4-mb.svg" style="max-width: 100%; width: 100%;cursor: grab;" onclick="show(4)" />
+              <img src="./static/images/dien-gia-4-mb.svg" style="max-width: 100%;cursor: grab;" onclick="show(4)" />
             </div>
             <div class="col-6">
-              <img src="./static/images/dien-gia-5-mb.svg" style="max-width: 100%; width: 100%;cursor: grab;" onclick="show(5)" />
+              <img src="./static/images/dien-gia-5-mb.svg" style="max-width: 100%;cursor: grab;" onclick="show(5)" />
             </div>
             <div class="col-6">
-              <img src="./static/images/dien-gia-6-mb.svg" style="max-width: 100%; width: 100%;cursor: grab;" onclick="show(6)" />
+              <img src="./static/images/dien-gia-6-mb.svg" style="max-width: 100%;cursor: grab;" onclick="show(6)" />
             </div>
             <div class="col-6">
-              <img src="./static/images/dien-gia-7-mb.svg" style="max-width: 100%; width: 100%;cursor: grab;" onclick="show(7)" />
+              <img src="./static/images/dien-gia-7-mb.svg" style="max-width: 100%;cursor: grab;" onclick="show(7)" />
             </div>
             <div class="col-6">
-              <img src="./static/images/dien-gia-8-mb.svg" style="max-width: 100%; width: 100%;cursor: grab;" onclick="show(8)" />
+              <img src="./static/images/dien-gia-8-mb.svg" style="max-width: 100%;cursor: grab;" onclick="show(8)" />
             </div>
             <div class="col-6">
-              <img src="./static/images/dien-gia-9-mb.svg" style="max-width: 100%; width: 100%;cursor: grab;" onclick="show(9)" />
+              <img src="./static/images/dien-gia-9-mb.svg" style="max-width: 100%;cursor: grab;" onclick="show(9)" />
             </div>
             <div class="col-6">
-              <img src="./static/images/dien-gia-10-mb.svg" style="max-width: 100%; width: 100%;cursor: grab;" onclick="show(10)" />
+              <img src="./static/images/dien-gia-10-mb.svg" style="max-width: 100%;cursor: grab;" onclick="show(10)" />
             </div>
           </div>
         </div>
