--- a/index.html
+++ b/index.html
@@ -578,6 +578,20 @@
             <div class="col-6">
               <img src="./static/images/dien-gia-10-mb.svg" style="max-width: 100%; width: 100%;cursor: grab;" onclick="show(10)" />
             </div>
+            <div class="col-6">
+              <div class="position-relative">
+                <img src="./static/images/dien-gia-10-mb.svg" style="max-width: 100%; width: 100%;cursor: grab;" onclick="show(10)" />
+                <div class="position-absolute" style="bottom: 0; width: 100%"> text center</div>
+              </div>
+            </div>
+            <div class="col-6">
+              <div class="position-relative">
+                <img src="./static/images/dien-gia-10-mb.svg" style="max-width: 100%;cursor: grab;" onclick="show(10)" />
+                <div class="position-absolute" style="bottom: 0; width: 100%"> text center</div>
+              </div>
+            </div>
+            
+          </div>
           </div>
         </div>
       </div>
