--- a/index.html
+++ b/index.html
@@ -590,7 +590,12 @@
                 <div class="position-absolute" style="bottom: 0; width: 100%"> text center</div>
               </div>
             </div>
-            
+            <div class="col-6">
+              <div class="position-relative">
+                <img src="./static/images/dien-gia-10-mb.svg" style="width: 100%;height:auto;cursor: grab;" onclick="show(10)" />
+                <div class="position-absolute" style="bottom: 0; width: 100%"> text center</div>
+              </div>
+            </div>
           </div>
           </div>
         </div>
