fix-dien-gia-mb

--- a/index.html
+++ b/index.html
@@ -560,47 +560,146 @@
       <div class="dien-gia-list mobile">
         <div class="container">
           <div class="row">
-            <div class="col-6">
-              <img src="./static/images/dien-gia-1-mb.svg"
-                style="max-width: 100%;height: 100%; width: 100%;cursor: grab;" onclick="show(1)" />
+            <div class="col-6" style="padding-bottom: 10px;">
+              <div class="position-relative">
+                <img src="./static/images/dien-gia-1-kx.png" style="max-width: 100%;cursor: grab;"
+                  onclick="show(1)" />
+                <div class="position-absolute" style="bottom: 5%; width: 100%; color: #FFFFFF;font-family: 'Mulish';font-style: normal;font-weight: 400;font-size: 8px;text-align: center;">
+                  <div style="line-height: 13px;" class="dx-dg">
+                    <div>Ông</div>
+                    <div style="font-size: 12px;font-weight: 700;">Warrick Cleine</div>
+                  </div> 
+                  <br>
+                  <div style="line-height: 10px;" class="cv-dg">
+                    <div>Chủ tịch kiêm Tổng giám đốc </div>
+                    <div>KPMG Việt Nam và Campuchia
+                    </div>
+                  </div>      
+                </div>
+              </div>
             </div>
-            <div class="col-6">
-              <img src="./static/images/dien-gia-2-mb.svg"
-                style="max-width: 100%;height: auto; width: 100%;cursor: grab;" onclick="show(2)" />
+            <div class="col-6" style="padding-bottom: 10px;">
+              <div class="position-relative">
+                <img src="./static/images/dien-gia-2-kx.png" style="max-width: 100%;cursor: grab;"
+                  onclick="show(2)" />
+                <div class="position-absolute" style="bottom: 5%; width: 100%; color: #FFFFFF;font-family: 'Mulish';font-style: normal;font-weight: 200;font-size: 8px;text-align: center;">
+                  <div style="line-height: 13px;" class="dx-dg">
+                    <div>Ông</div>
+                    <div style="font-size: 12px;font-weight: 500;">Masataka “Sam” Yoshida</div>
+                  </div> 
+                  <br>
+                  <div style="line-height: 10px;" class="cv-dg">
+                    <div>Giám đốc toàn cầu Dịch vụ mua</div>
+                    <div>bán - sáp nhâp xuyên quốc gia,</div>
+                    <div>RECOF Corporation, </div>
+                    <div>Tổng giám đốc RECOF Việt Nam</div>
+                  </div>      
+                </div>
+              </div>
             </div>
-            <div class="col-6">
-              <img src="./static/images/dien-gia-3-mb.svg" style="max-width: 100%; width: 100%;cursor: grab;"
-                onclick="show(3)" />
+            <div class="col-6" style="padding-bottom: 10px;">
+              <div class="position-relative">
+                <img src="./static/images/dien-gia-3-kx.png" style="max-width: 100%;cursor: grab;"
+                  onclick="show(3)" />
+                <div class="position-absolute" style="bottom: 5%; width: 100%; color: #FFFFFF;font-family: 'Mulish';font-style: normal;font-weight: 400;font-size: 8px;text-align: center;">
+                  <div style="line-height: 13px;" class="dx-dg">
+                    <div>Ông</div>
+                    <div style="font-size: 12px;font-weight: 700;">Masataka “Sam” Yoshida</div>
+                  </div> 
+                  <br>
+                  <div style="line-height: 10px;" class="cv-dg">
+                    <div>Giám đốc điều hành – Quản lý đầu tư</div>
+                    <div>Tập đoàn VinaCapital</div>
+                  </div>      
+                </div>
+              </div>
             </div>
-            <div class="col-6">
-              <img src="./static/images/dien-gia-4-mb.svg" style="max-width: 100%; width: 100%;cursor: grab;"
-                onclick="show(4)" />
+            <div class="col-6" style="padding-bottom: 10px;">
+              <div class="position-relative">
+                <img src="./static/images/dien-gia-4-kx.png" style="max-width: 100%;cursor: grab;"
+                  onclick="show(4)" />
+                <div class="position-absolute" style="bottom: 5%; width: 100%; color: #FFFFFF;font-family: 'Mulish';font-style: normal;font-weight: 400;font-size: 8px;text-align: center;">
+                  <div style="line-height: 13px;" class="dx-dg">
+                    <div>Ông</div>
+                    <div style="font-size: 12px;font-weight: 700;">Seck Yee Chung</div>
+                  </div> 
+                  <br>
+                  <div style="line-height: 10px;" class="cv-dg">
+                    <div>Luật sư điều hành </div>
+                    <div>Công ty Luật Baker McKenzie</div>
+                  </div>      
+                </div>
+              </div>
             </div>
-            <div class="col-6">
-              <img src="./static/images/dien-gia-5-mb.svg" style="max-width: 100%; width: 100%;cursor: grab;"
-                onclick="show(5)" />
+            <div class="col-6" style="padding-bottom: 10px;">
+              <div class="position-relative">
+                <img src="./static/images/dien-gia-5-kx.png" style="max-width: 100%;cursor: grab;"
+                  onclick="show(5)" />
+                <div class="position-absolute" style="bottom: 5%; width: 100%; color: #FFFFFF;font-family: 'Mulish';font-style: normal;font-weight: 400;font-size: 8px;text-align: center;">
+                  <div style="line-height: 13px;" class="dx-dg">
+                    <div>Ông</div>
+                    <div style="font-size: 12px;font-weight: 700;">Kazuhiko Yoshimatsu</div>
+                  </div> 
+                  <br>
+                  <div style="line-height: 10px;" class="cv-dg">
+                    <div>Tổng giám đốc kiêm Trưởng đại</div>
+                    <div>diện Sở Giao dịch Chứng khoán</div>
+                    <div>Tokyo (Singapore)</div>
+                  </div>      
+                </div>
+              </div>
             </div>
-            <div class="col-6">
-              <img src="./static/images/dien-gia-6-mb.svg" style="max-width: 100%; width: 100%;cursor: grab;"
-                onclick="show(6)" />
+            <div class="col-6" style="padding-bottom: 10px;">
+              <div class="position-relative">
+                <img src="./static/images/dien-gia-6-kx.png" style="max-width: 100%;cursor: grab;"
+                  onclick="show(6)" />
+                <div class="position-absolute" style="bottom: 5%; width: 100%; color: #FFFFFF;font-family: 'Mulish';font-style: normal;font-weight: 400;font-size: 8px;text-align: center;">
+                  <div style="line-height: 13px;" class="dx-dg">
+                    <div>Bà</div>
+                    <div style="font-size: 12px;font-weight: 700;">Trang Bùi</div>
+                  </div> 
+                  <br>
+                  <div style="line-height: 10px;" class="cv-dg">
+                    <div>Tổng giám đốc </div>
+                    <div>Công ty Cushman & Wakefield Việt Nam</div>
+                  </div>      
+                </div>
+              </div>
             </div>
-            <div class="col-6">
-              <img src="./static/images/dien-gia-7-mb.svg" style="max-width: 100%; width: 100%;cursor: grab;"
-                onclick="show(7)" />
+            <div class="col-6" style="padding-bottom: 10px;">
+              <div class="position-relative">
+                <img src="./static/images/dien-gia-7-kx.png" style="max-width: 100%;cursor: grab;"
+                  onclick="show(7)" />
+                <div class="position-absolute" style="bottom: 5%; width: 100%; color: #FFFFFF;font-family: 'Mulish';font-style: normal;font-weight: 400;font-size: 8px;text-align: center;">
+                  <div style="line-height: 13px;" class="dx-dg">
+                    <div>Bà</div>
+                    <div style="font-size: 12px;font-weight: 700;">Bình Lê Vandekerckove</div>
+                  </div> 
+                  <br>
+                  <div style="line-height: 10px;" class="cv-dg">
+                    <div>Nhà Sáng Lập & Tổng Giám Đốc, </div>
+                    <div>Công ty Tư vấn Thương vụ ASART</div>
+                  </div>      
+                </div>
+              </div>
             </div>
-            <div class="col-6">
-              <img src="./static/images/dien-gia-8-mb.svg" style="max-width: 100%; width: 100%;cursor: grab;"
-                onclick="show(8)" />
+            <div class="col-6" style="padding-bottom: 10px;">
+              <div class="position-relative">
+                <img src="./static/images/dien-gia-8-kx.png" style="max-width: 100%;cursor: grab;"
+                  onclick="show(8)" />
+                <div class="position-absolute" style="bottom: 5%; width: 100%; color: #FFFFFF;font-family: 'Mulish';font-style: normal;font-weight: 400;font-size: 8px;text-align: center;">
+                  <div style="line-height: 13px;" class="dx-dg">
+                    <div>Ông</div>
+                    <div style="font-size: 12px;font-weight: 700;">Lê Khánh Lâm</div>
+                  </div> 
+                  <br>
+                  <div style="line-height: 10px;" class="cv-dg">
+                    <div>Chủ tịch Công ty RSM Việt Nam</div>
+                  </div>      
+                </div>
+              </div>
             </div>
-            <div class="col-6">
-              <img src="./static/images/dien-gia-9-mb.svg" style="max-width: 100%; width: 100%;cursor: grab;"
-                onclick="show(9)" />
-            </div>
-            <div class="col-6">
-              <img src="./static/images/dien-gia-10-mb.svg" style="max-width: 100%; width: 100%;cursor: grab;"
-                onclick="show(10)" />
-            </div>
-            <div class="col-6">
+            <div class="col-6" style="padding-bottom: 10px;">
               <div class="position-relative">
                 <img src="./static/images/dien-gia-9-kx.png" style="max-width: 100%;cursor: grab;"
                   onclick="show(9)" />
@@ -617,7 +716,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-6">
+            <div class="col-6" style="padding-bottom: 10px;">
               <div class="position-relative">
                 <img src="./static/images/dien-gia-10-kx.png" style="max-width: 100%;cursor: grab;"
                   onclick="show(10)" />
