--- a/index.html
+++ b/index.html
@@ -744,6 +744,7 @@
         <img class="mobile" src="./static/images/binh-chon-mb.svg" style="width: 100%;height: auto;" />
       </div>
       <img class="mobile" src="./static/images/vinh-danh-mb.svg" style="width: 100%;height: auto;" />
+      <img class="mobile" src="./static/images/vinh-danh-text.png" style="width: 100%;height: auto;" />
       <img class="mobile" src="./static/images/thoi-gian-mb.svg" style="width: 100%;height: auto;" />
 
     </section>
