--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
   <!-- <meta property="og:image:url" content="https://static.tkbcdn.com/static-page/img/BelgianBeer_fb_thumb.jpg" /> -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href='https://fonts.googleapis.com/css?family=Mulish' rel='stylesheet'>
   <link rel="stylesheet" href="./static/index.css">
 
   <!-- Custom CSS -->
@@ -742,9 +743,12 @@
       <img class="pc" src="./static/images/binh-chon.png" style="max-width: 100%; width: 100%" alt="">
       <div class="container">
         <img class="mobile" src="./static/images/binh-chon-mb.svg" style="width: 100%;height: auto;" />
+        <img class="mobile" src="./static/images/vinh-danh-title.svg" style="width: 100%;height: auto;" />
+        <img class="mobile" src="./static/images/Vector.svg" style="width: 100%;height: auto;" />
+        <img class="mobile" src="./static/images/vinh-danh-text.svg" style="width: 100%;height: auto;" />
       </div>
-      <img class="mobile" src="./static/images/vinh-danh-mb.svg" style="width: 100%;height: auto;" />
-      <img class="mobile" src="./static/images/vinh-danh-text.png" style="width: 100%;height: auto;" />
+      <!-- <img class="mobile" src="./static/images/vinh-danh-mb.svg" style="width: 100%;height: auto;" /> -->
+      
       <img class="mobile" src="./static/images/thoi-gian-mb.svg" style="width: 100%;height: auto;" />
 
     </section>
