--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <!-- <meta property="og:image:url" content="https://static.tkbcdn.com/static-page/img/BelgianBeer_fb_thumb.jpg" /> -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href='https://fonts.googleapis.com/css?family=Mulish' rel='stylesheet'>
+  <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
   <link rel="stylesheet" href="./static/index.css">
 
   <!-- Custom CSS -->
@@ -571,7 +571,7 @@
                     <div style="font-size: 12px;font-weight: 700;">Warrick Cleine</div>
                   </div> 
                   <br>
-                  <div style="line-height: 10px;" class="cv-dg">
+                  <div style="line-height: 10px;font-family: 'Roboto';" class="cv-dg">
                     <div>Chủ tịch kiêm Tổng giám đốc </div>
                     <div>KPMG Việt Nam và Campuchia
                     </div>
@@ -583,13 +583,13 @@
               <div class="position-relative">
                 <img src="./static/images/dien-gia-2-kx.png" style="max-width: 100%;cursor: grab;"
                   onclick="show(2)" />
-                <div class="position-absolute" style="bottom: 5%; width: 100%; color: #FFFFFF;font-family: 'Mulish';font-style: normal;font-weight: 200;font-size: 8px;text-align: center;">
+                <div class="position-absolute" style="bottom: 5%; width: 100%; color: #FFFFFF;font-family: 'Mulish';font-style: normal;font-weight: 400;font-size: 8px;text-align: center;">
                   <div style="line-height: 13px;" class="dx-dg">
                     <div>Ông</div>
-                    <div style="font-size: 12px;font-weight: 500;">Masataka “Sam” Yoshida</div>
+                    <div style="font-size: 12px;font-weight: 700;">Masataka “Sam” Yoshida</div>
                   </div> 
                   <br>
-                  <div style="line-height: 10px;" class="cv-dg">
+                  <div style="line-height: 10px;font-family: 'Roboto';" class="cv-dg">
                     <div>Giám đốc toàn cầu Dịch vụ mua</div>
                     <div>bán - sáp nhâp xuyên quốc gia,</div>
                     <div>RECOF Corporation, </div>
@@ -608,7 +608,7 @@
                     <div style="font-size: 12px;font-weight: 700;">Masataka “Sam” Yoshida</div>
                   </div> 
                   <br>
-                  <div style="line-height: 10px;" class="cv-dg">
+                  <div style="line-height: 10px;font-family: 'Roboto';" class="cv-dg">
                     <div>Giám đốc điều hành – Quản lý đầu tư</div>
                     <div>Tập đoàn VinaCapital</div>
                   </div>      
@@ -625,7 +625,7 @@
                     <div style="font-size: 12px;font-weight: 700;">Seck Yee Chung</div>
                   </div> 
                   <br>
-                  <div style="line-height: 10px;" class="cv-dg">
+                  <div style="line-height: 10px;font-family: 'Roboto';" class="cv-dg">
                     <div>Luật sư điều hành </div>
                     <div>Công ty Luật Baker McKenzie</div>
                   </div>      
@@ -642,7 +642,7 @@
                     <div style="font-size: 12px;font-weight: 700;">Kazuhiko Yoshimatsu</div>
                   </div> 
                   <br>
-                  <div style="line-height: 10px;" class="cv-dg">
+                  <div style="line-height: 10px;font-family: 'Roboto';" class="cv-dg">
                     <div>Tổng giám đốc kiêm Trưởng đại</div>
                     <div>diện Sở Giao dịch Chứng khoán</div>
                     <div>Tokyo (Singapore)</div>
@@ -660,7 +660,7 @@
                     <div style="font-size: 12px;font-weight: 700;">Trang Bùi</div>
                   </div> 
                   <br>
-                  <div style="line-height: 10px;" class="cv-dg">
+                  <div style="line-height: 10px;font-family: 'Roboto';" class="cv-dg">
                     <div>Tổng giám đốc </div>
                     <div>Công ty Cushman & Wakefield Việt Nam</div>
                   </div>      
@@ -677,7 +677,7 @@
                     <div style="font-size: 12px;font-weight: 700;">Bình Lê Vandekerckove</div>
                   </div> 
                   <br>
-                  <div style="line-height: 10px;" class="cv-dg">
+                  <div style="line-height: 10px;font-family: 'Roboto';" class="cv-dg">
                     <div>Nhà Sáng Lập & Tổng Giám Đốc, </div>
                     <div>Công ty Tư vấn Thương vụ ASART</div>
                   </div>      
@@ -694,7 +694,7 @@
                     <div style="font-size: 12px;font-weight: 700;">Lê Khánh Lâm</div>
                   </div> 
                   <br>
-                  <div style="line-height: 10px;" class="cv-dg">
+                  <div style="line-height: 10px;font-family: 'Roboto';" class="cv-dg">
                     <div>Chủ tịch Công ty RSM Việt Nam</div>
                   </div>      
                 </div>
@@ -704,13 +704,13 @@
               <div class="position-relative">
                 <img src="./static/images/dien-gia-9-kx.png" style="max-width: 100%;cursor: grab;"
                   onclick="show(9)" />
-                <div class="position-absolute" style="bottom: 5%; width: 100%; color: #FFFFFF;font-family: 'Mulish';font-style: normal;font-weight: 200;font-size: 8px;text-align: center;">
+                <div class="position-absolute" style="bottom: 5%; width: 100%; color: #FFFFFF;font-family: 'Mulish';font-style: normal;font-weight: 400;font-size: 8px;text-align: center;">
                   <div style="line-height: 13px;" class="dx-dg">
                     <div>Ông</div>
-                    <div style="font-size: 12px;font-weight: 500;">Phạm Duy Khương</div>
+                    <div style="font-size: 12px;font-weight: 700;">Phạm Duy Khương</div>
                   </div> 
                   <br>
-                  <div style="line-height: 10px;" class="cv-dg">
+                  <div style="line-height: 10px;font-family: 'Roboto';" class="cv-dg">
                     <div>Giám đốc điều hành </div>
                     <div>Công ty ASL Law</div>
                   </div>      
@@ -721,13 +721,13 @@
               <div class="position-relative">
                 <img src="./static/images/dien-gia-10-kx.png" style="max-width: 100%;cursor: grab;"
                   onclick="show(10)" />
-                <div class="position-absolute" style="bottom: 5%; width: 100%; color: #FFFFFF;font-family: 'Mulish';font-style: normal;font-weight: 200;font-size: 8px;text-align: center;">
+                <div class="position-absolute" style="bottom: 5%; width: 100%; color: #FFFFFF;font-family: 'Mulish';font-style: normal;font-weight: 400;font-size: 8px;text-align: center;">
                   <div style="line-height: 13px;" class="dx-dg">
                     <div>Ông</div>
-                    <div style="font-size: 12px;font-weight: 500;">Nguyễn Đức Dũng</div>
+                    <div style="font-size: 12px;font-weight: 700;">Nguyễn Đức Dũng</div>
                   </div> 
                   <br>
-                  <div style="line-height: 10px;" class="cv-dg">
+                  <div style="line-height: 10px;font-family: 'Roboto';" class="cv-dg">
                     <div>Thành viên HĐQT</div>
                     <div>Giám đốc tài chính Novaland</div>
                   </div>      
@@ -743,9 +743,9 @@
       <img class="pc" src="./static/images/binh-chon.png" style="max-width: 100%; width: 100%" alt="">
       <div class="container">
         <img class="mobile" src="./static/images/binh-chon-mb.svg" style="width: 100%;height: auto;" />
-        <img class="mobile" src="./static/images/vinh-danh-title.svg" style="width: 100%;height: auto;" />
+        <img class="mobile" src="./static/images/vinh-danh-title.svg" style="width: 100%;height: auto;background: linear-gradient(90deg, #00CCFF -63.78%, #FF00FF 148.56%);" />
         <img class="mobile" src="./static/images/Vector.svg" style="width: 100%;height: auto;" />
-        <img class="mobile" src="./static/images/vinh-danh-text.svg" style="width: 100%;height: auto;" />
+        <img class="mobile" src="./static/images/vinh-danh-text.svg" style="width: 100%;height: auto;background: linear-gradient(90deg, #00CCFF -63.78%, #FF00FF 148.56%);" />
       </div>
       <!-- <img class="mobile" src="./static/images/vinh-danh-mb.svg" style="width: 100%;height: auto;" /> -->
       
