--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@
                 <div class="position-absolute" style="bottom: 5%; width: 100%; color: #FFFFFF;font-family: 'Mulish';font-style: normal;font-weight: 400;font-size: 8px;text-align: center;">
                   <div style="line-height: 13px;" class="dx-dg">
                     <div>Ông</div>
-                    <div style="font-size: 12px;font-weight: 700;">Masataka “Sam” Yoshida</div>
+                    <div style="font-size: 12px;font-weight: 700;">Andy Ho</div>
                   </div> 
                   <br>
                   <div style="line-height: 10px;font-family: 'Roboto';" class="cv-dg">
@@ -741,11 +741,11 @@
     </section>
     <section class="binh-chon">
       <img class="pc" src="./static/images/binh-chon.png" style="max-width: 100%; width: 100%" alt="">
-      <div class="container">
+      <div class="container" style="padding-bottom: 20px;">
         <img class="mobile" src="./static/images/binh-chon-mb.svg" style="width: 100%;height: auto;" />
         <img class="mobile" src="./static/images/vinh-danh-title.svg" style="width: 100%;height: auto;background: linear-gradient(90deg, #00CCFF -63.78%, #FF00FF 148.56%);" />
-        <img class="mobile" src="./static/images/Vector.svg" style="width: 100%;height: auto;" />
-        <img class="mobile" src="./static/images/vinh-danh-text.svg" style="width: 100%;height: auto;background: linear-gradient(90deg, #00CCFF -63.78%, #FF00FF 148.56%);" />
+        <img class="mobile" src="./static/images/a8d6d2da4ed0898ed0c1.jpeg" style="width: 100%;height: auto;background: linear-gradient(90deg, #00CCFF -63.78%, #FF00FF 148.56%);" />
+        <img class="mobile" src="./static/images/vinh-danh-text.svg" style="width: 100%;height: auto;" />
       </div>
       <!-- <img class="mobile" src="./static/images/vinh-danh-mb.svg" style="width: 100%;height: auto;" /> -->
       
