--- a/index-en.html
+++ b/index-en.html
@@ -252,7 +252,7 @@
       </div>
     </header>
     <section class="banner">
-      <a href="#booking"  class="booking-btn">BOOK NOW</a>
+      <a href="#booking"  class="booking-btn"><div style="width:27px"></div>BOOK NOW<div style="width:27px"></div></a>
       <img class="pc" src="./static/images/Header.svg" style="max-width: 100%; width: 100%" />
       <img class="mobile" src="./static/images/banner-mobile.svg" style="width: 100%;height: auto;" />
     </section>
