--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
     <section id="gt" class="gt">
       <img class="mobile" src="./static/images/gt-mobile.png" style="width: 100%;height: auto;" alt="">
       <div class="container">
-        <img class="gt-btn pc" src="./static/images/menu-gt-112.png" style="max-width: 100%;" alt="">
+        <img class="gt-btn pc" src="./static/images/mt-gt-112.svg" style="max-width: 100%;" alt="">
         <div class="gt-content">
           <p>
             Bất chấp những bất ổn của kinh tế toàn cầu, Việt Nam vẫn nổi lên là điểm sáng với mức tăng trưởng GDP năm
@@ -395,7 +395,7 @@
         </div>
         <img src="./static/images/doi-tuong-tham-du.png" style="max-width: 100%; width: 100%" alt=""
           class="doi-tuong-tham-du pc">
-        <img src="./static/images/lich-trinh.png" style="max-width: 100%; width: 100%" alt="" class="lich-trinh pc">
+        <img src="./static/images/lich-trinh.svg" style="max-width: 100%; width: 100%" alt="" class="lich-trinh pc">
       </div>
       <img class="mobile" src="./static/images/diem-nhan-mb.svg" style="width: 100%;height: auto;" />
       <div class="mobile">
@@ -740,7 +740,7 @@
       </div>
     </section>
     <section class="binh-chon">
-      <img class="pc" src="./static/images/binh-chon.png" style="max-width: 100%; width: 100%" alt="">
+      <img class="pc" src="./static/images/binh-chon.svg" style="max-width: 100%; width: 100%" alt="">
       <div class="container" style="padding-bottom: 20px;">
         <img class="mobile" src="./static/images/binh-chon-mb.svg" style="width: 100%;height: auto;" />
         <img class="mobile" src="./static/images/vinh-danh-title.svg" style="width: 100%;height: auto;background: linear-gradient(90deg, #00CCFF -63.78%, #FF00FF 148.56%);" />
@@ -754,7 +754,7 @@
     </section>
     <section id="booking" class="thong-tin-ve">
       <div class="pc">
-        <img src="./static/images/thong-tin-ve.png" style="max-width: 100%; width: 100%" alt="">
+        <img src="./static/images/thong-tin-ve.svg" style="max-width: 100%; width: 100%" alt="">
         <a href="#">
           <img class="btn-vir-1" onclick='virPage()' src="./static/images/vir-btn.svg"
             style="max-width: 100%; width: 100%; width: 13.9%;" alt="">
