--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
     </section>
     <section id="chuong-trinh" class="chuong-trinh">
       <div class="pc">
-        <img src="./static/images/ct-title.png" style="max-width: 100%; width: 100%" />
+        <img src="./static/images/ct-title.svg" style="max-width: 100%; width: 100%" />
       </div>
       <div style="background: linear-gradient(90deg, #00CCFF -63.78%, #FF00FF 148.56%);" class="mobile">
         <img src="./static/images/ct-title-mb.png" style="max-width: 100%; width: 100%" />
@@ -505,7 +505,7 @@
       <img class="mobile" src="./static/images/chuong-trinh-6-mb.svg" style="width: 100%;height: auto;" />
       <div id="dien-gia" class="dien-gia">
         <div class="pc" style="display: flex;">
-          <img src="./static/images/dien-title2.png" style="max-width: 100%; margin: auto;" class="title" />
+          <img src="./static/images/dien-gia-title.svg" style="max-width: 100%; margin: auto;" class="title" />
         </div>
         <div class="container">
           <img class="mobile" src="./static/images/dien-gia-mb.svg" style="width: 100%; height: auto;"
