--- a/index.html
+++ b/index.html
@@ -788,7 +788,7 @@
       <div class="pc">
         <img src="./static/images/tai-tro-pc.svg" style="max-width: 100%; width: 100%" alt="">
       </div>
-      <img class="mobile" src="./static/images/tai-tro-mb.svg" style="width: 100%;height: auto;" />
+      <img class="mobile" src="./static/images/tai-tro-test.png" style="width: 100%;height: auto;" />
     </section>
     <section class="footer">
       <div class="container">
