--- a/index.html
+++ b/index.html
@@ -236,14 +236,14 @@
           <div class="languages" style="display: flex; border-radius: 8px; padding-right: 24px;">
             <div class="inline-block">
               <a href="./index.html">
-                <img class="lang vi" src="./static/images/btnvimb.png"
-                  style="max-width: 100%; width: 100%; border-radius: 8px 0px 0px 8px;" />
+                <img src="./static/images/btnvimb.svg"
+                  style="max-width: 100%;height: 100%; width: 100%; border-radius: 8px 0px 0px 8px;" />
               </a>
             </div>
             <div class="inline-block">
               <a href="./index-en.html" class="">
-                <img class="lang us" src="./static/images/btnenmb.png"
-                  style="max-width: 100%; width: 100%; border-radius: 0px 8px 8px 0px;" />
+                <img src="./static/images/btnenmb.svg"
+                  style="max-width: 100%;height: 100%; width: 100%; border-radius: 0px 8px 8px 0px;" />
               </a>
             </div>
           </div>
@@ -261,7 +261,7 @@
       <img class="mobile" src="./static/images/banner-mobile.svg" style="width: 100%;height: auto;" />
     </section>
     <section id="gt" class="gt">
-      <img class="mobile" src="./static/images/gt-mobile.png" style="width: 100%;height: auto;" alt="">
+      <img class="mobile" src="./static/images/gt-mobile.svg" style="width: 100%;height: auto;" alt="">
       <div class="container">
         <img class="gt-btn pc" src="./static/images/mt-gt-112.svg" style="max-width: 100%;" alt="">
         <div class="gt-content">
@@ -490,7 +490,7 @@
         <img src="./static/images/ct-title.svg" style="max-width: 100%; width: 100%" />
       </div>
       <div style="background: linear-gradient(90deg, #00CCFF -63.78%, #FF00FF 148.56%);" class="mobile">
-        <img src="./static/images/ct-title-mb.png" style="max-width: 100%; width: 100%" />
+        <img src="./static/images/ct-title-mb.svg" style="max-width: 100%; width: 100%" />
       </div>
       <img src="./static/images/ct-banner.png" style="max-width: 100%; width: 100%" />
       <img src="./static/images/thao-luan.svg" style="max-width: 100%; width: 100%" class="pc" />
