--- a/index.html
+++ b/index.html
@@ -786,9 +786,9 @@
     </section>
     <section class="taitro">
       <div class="pc">
-        <img src="./static/images/tai-tro-pc.svg" style="max-width: 100%; width: 100%" alt="">
+        <img src="./static/images/tai-tro.svg" style="max-width: 100%; width: 100%" alt="">
       </div>
-      <img class="mobile" src="./static/images/tai-tro-test.png" style="width: 100%;height: auto;" />
+      <img class="mobile" src="./static/images/tai-tro-mb.png" style="width: 100%;height: auto;" />
     </section>
     <section class="footer">
       <div class="container">
