--- a/index.html
+++ b/index.html
@@ -197,10 +197,14 @@
             <a href="#booking" class="menu-link ">thông tin vé</a>
           </div>
           <div class="language" style="display: flex; border-radius: 8px; padding-left: 55px;">
-            <img class="pc" src="./static/images/btnvi.png"
+            <a href="./index.html">
+              <img class="pc" src="./static/images/btnvi.png"
               style="max-width: 100%; width: 100%; border-radius: 8px 0px 0px 8px;" />
-            <img class="pc" src="./static/images/btnus.png"
+            </a>
+            <a href="./index-en.html">
+              <img class="pc" src="./static/images/btnus.png"
               style="max-width: 100%; width: 100%; border-radius: 0px 8px 8px 0px;" />
+            </a>
           </div>
         </div>
       </div>
